--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:16160",
-      "sslPort": 44323
+      "applicationUrl": "http://localhost:33580",
+      "sslPort": 44349
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Api": {
+    "ApiOne": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
